# Gameboy-Emulator

./: .gitignore  CMakeLists.txt  GameBoyEmulator.sln  README.md
GameBoyEmulator/: AddressBus.cpp  AddressBus.h  CPU.cpp  CPU.h  Cartridge.cpp  ExternalRAM.cpp  GameBoyEmulator.cpp  GameBoyEmulator.vcxproj  GameBoyEmulator.vcxproj.filters  HRAM.cpp  HRAM.h  InterrupHandler.h  LCDC.cpp  MMU.cpp  OAM.cpp  OAM.h  PPU.cpp  PPU.h  Serial.cpp  VRAM.cpp  WRAM.cpp  WRAM.h  imgui.ini
GameBoyEmulator/APU/: APU.cpp  APU.h
GameBoyEmulator/APU/Channels/: NoiseChanel.h  PulseChannel.h  WaveChannel.h
GameBoyEmulator/CPU/: CPU.cpp  CPU.h  InterrupHandler.h  InterruptHandler.cpp  Serial.cpp  Serial.h  Timer.cpp  Timer.h
GameBoyEmulator/IO/: InterrupHandler.h  InterruptHandler.cpp  Joypad.cpp  Joypad.h  Serial.cpp  Serial.h  Timer.cpp  Timer.h
GameBoyEmulator/Memory/: Cartridge.cpp  Cartridge.h  ExternalRAM.h  HRAM.cpp  HRAM.h  MMU.cpp  MMU.h  RAM.cpp  RAM.h  WRAM.cpp  WRAM.h
GameBoyEmulator/Memory/MBC/: MBC.cpp  MBC.h
GameBoyEmulator/Memory/MBC/MBCS/MBC0/: MBC0.cpp
GameBoyEmulator/Memory/MBC/MBCS/MBC1/: MBC1.cpp  MBC1.h
GameBoyEmulator/Memory/MBC/MBCS/MBC3/: MBC3.cpp  MBC3.h
GameBoyEmulator/Memory/MBC/MBCS/MBC5/: MBC5.cpp  MBD5.h
GameBoyEmulator/Pipeline/: FIFO.cpp  FIFO.h  Fetcher.cpp  Fetcher.h  LCDC.cpp  LCDC.h  OAM.cpp  OAM.h  PPU.cpp  PPU.h  VRAM.cpp  VRAM.h
GameBoyEmulator/Utility/: Bitwise.h
libs/imgui-1.91.3 - Copy/backends/: imgui_impl_sdlrenderer3.cpp
src/: CMakeLists.txt  GameBoyEmulator.cpp  GameBoyEmulator.vcxproj  GameBoyEmulator.vcxproj.filters  imgui.ini
src/APU/: APU.cpp  APU.h
src/APU/Channels/: NoiseChanel.h  PulseChannel.h  WaveChannel.h
src/CPU/: CPU.cpp  CPU.h
src/IO/: InterruptHandler.cpp  Joypad.cpp  Serial.h  Timer.cpp
src/Memory/: Cartridge.cpp  Cartridge.h  HRAM.cpp  MMU.cpp  MMU.h  WRAM.cpp  WRAM.h
src/Memory/MBC/MBCS/MBC0/: MBC0.cpp  MBC0.h
src/Memory/MBC/MBCS/MBC1/: MBC1.h
src/Memory/MBC/MBCS/MBC3/: MBC3.cpp
src/Memory/MBC/MBCS/MBC5/: MBD5.h
src/Memory/enums/: CartridgeTypes.h
src/Pipeline/: LCDC.cpp  LCDC.h  PPU.cpp  PPU.h  VRAM.cpp  VRAM.h
src/Utility/: Bitwise.h
